2004-10-07  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/cal-prefs-dialog.c: remove useless include

	* gui/dialogs/url-editor-dialog.c: ditto
	
2004-10-07  JP Rosevear  <jpr@novell.com>
	
	* gui/print.c: guard config.h

	* gui/tasks-control.c: guard config.h, remove useless include

	* gui/migration.c: remove useless include

	* gui/main.c: remove useless include

	* gui/e-calendar-view.h: #define the type

	* gui/calendar-offline-handler.c: remove useless include

	* gui/calendar-config.c: tidy header

2004-10-07  JP Rosevear  <jpr@novell.com>
	
	* gui/calendar-commands.c: guard config.h include, kill warning
	and remove useless include

2004-10-06  Rodrigo Moya <rodrigo@novell.com>

	Fixes #65932

	* common/authentication.c: keep a hash table of all the source lists.
	(auth_new_cal_from_uri): do a search in the source list for the given
	URI, and use that ESource if we find it. Also, keep the hash table of
	source lists up to date.

	* gui/comp-editor-factory.c (cal_opened_cb): don't assert on error
	cases, just display an error dialog.

2004-10-06  Not Zed  <NotZed@Ximian.com>

	* gui/gnome-cal.c (gnome_calendar_setup_view_popup): rename to
	view_popup_factory.  Make it build an epopup item list directly.
	Can't re-use the galview cruft :-/
	(gnome_calendar_discard_view_popup): no longer needed.
	(gc_set_view, gc_save_custom_view, gc_define_views_response) 
	(gc_define_views): implement the gal-view popup menu items.

	* gui/gnome-cal.h:
	* gui/e-week-view.h:
	* gui/e-day-view.h:
	* gui/e-cal-list-view.h: removed old e-popup-menu header.

	* gui/e-calendar-view.c (setup_popup_icons): removed.
	(e_calendar_view_create_popup_menu): converted to use e-popup.
	(on_paste, on_copy, on_cut, on_delete_occurrence) 
	(on_unrecur_appointment, on_delete_appointment, on_publish) 
	(on_forward, on_meeting, on_move_to, on_copy_to, on_print_event) 
	(on_save_as, on_print, on_edit_appointment, on_goto_today) 
	(on_goto_date, on_new_task, on_new_meeting, on_new_event) 